Added Map Pathfinding

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <canvas id="main"></canvas>
     </div>
   
+    <div id="name">Name:</div>
     <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
