--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <canvas id="main"></canvas>
     </div>
   
-    <div id="name">Name:</div>
+    <pre id="name"></pre>
     <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
