added UI / gameover / state logic to manager

--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
     </style>
   </head>
   <body>
-    <div id="UI">
-      <canvas id="background"></canvas>
-      <canvas id="main"></canvas>
+    <div>
+      <div style="height: 20px;"></div>
+      <div class="canvas-container">
+        <canvas id="background"></canvas>
+        <canvas id="main"></canvas>
+        <canvas id="ui"></canvas>
+      </div>
     </div>
+    
   
     <pre id="name"></pre>
     <script type="module" src="/src/index.ts"></script>
