--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     
   
-    <pre id="name"></pre>
+    <!-- <pre id="name"></pre> -->
     <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
